fix: contact page header spacing

--- a/assets/styles/sass/contact-page.scss
+++ b/assets/styles/sass/contact-page.scss
@@ -8,8 +8,10 @@ body {
 }
 
 .contactHead {
+    margin-top: 32px;
     width: 90%;
-    margin-top: 5rem;
+    margin-inline: auto;
+    margin-top: 64px;
 
     h1 {
         font-size: 3.5rem;
